--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
         "underscore": null,
         "requirejs": null,
         "handlebars": null,
-        "require-handlebars-plugin": null
+        "require-handlebars-plugin": null,
+        "tabletop": null
     }
 }
